plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.2'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.dotashowcase'
version = '0.0.1'
description = "inventory-service"

java {
	sourceCompatibility = '25'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.apache.httpcomponents.client5:httpclient5'
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.15.0'
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.8.13'

	compileOnly 'org.projectlombok:lombok:1.18.42'

    annotationProcessor 'org.projectlombok:lombok:1.18.42'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:4.21.0'
    testImplementation platform('org.junit:junit-bom:5.13.4')
    testImplementation "org.junit.jupiter:junit-jupiter"
}

tasks.named('test') {
	useJUnitPlatform()
}
